WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253102
Fix Gamepad serialization after
260751@main
https://bugs.webkit.org/show_bug.cgi?id=253102
Summary
Fix Gamepad serialization after 260751@main
Alex Christensen
Reported
2023-02-28 12:56:40 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-02-28 12:56:52 PST
<
rdar://problem/106046830
>
Alex Christensen
Comment 2
2023-02-28 12:58:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10818
EWS
Comment 3
2023-02-28 13:50:52 PST
Committed
260965@main
(0a2e32ae9a4a): <
https://commits.webkit.org/260965@main
> Reviewed commits have been landed. Closing PR #10818 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug