Fix Gamepad serialization after 260751@main https://bugs.webkit.org/show_bug.cgi?id=253102 rdar://106046830

Reviewed by Brady Eidson.

We didn't serialize m_isNull.  We don't need to, but we do need to remove the nullable state.

* Source/WebKit/Shared/Gamepad/GamepadData.cpp:
(WebKit::GamepadData::GamepadData):
* Source/WebKit/Shared/Gamepad/GamepadData.h:
(WebKit::GamepadData::GamepadData): Deleted.
(WebKit::GamepadData::isNull const): Deleted.
(): Deleted.
* Source/WebKit/UIProcess/Gamepad/UIGamepadProvider.cpp:
(WebKit::UIGamepadProvider::snapshotGamepads):
* Source/WebKit/WebProcess/Gamepad/WebGamepad.cpp:
(WebKit::WebGamepad::updateValues):
* Source/WebKit/WebProcess/Gamepad/WebGamepadProvider.cpp:
(WebKit::WebGamepadProvider::setInitialGamepads):

Canonical link: https://commits.webkit.org/260965@main